change css folder to sass folder

--- a/style.css
+++ b/style.css
@@ -27,6 +27,8 @@
 
 /* */
 /* enjoy-mondays pattern variables */
+/* TODO test template variables */
+/* TODO $theme, $background combos, $a_color, $base_font_color and set into rule / options string */
 /*$theme: enjoy-mondays;*/
 /* colors */
 /* typos */
