--- a/SASS/sass/style.scss
+++ b/SASS/sass/style.scss
@@ -228,6 +228,7 @@ body#{$theme} {
 
   #{$theme} .content h1,
   #{$theme} .content h2,
+  #{$theme} .content h3,
   #{$theme} .content p,
   #{$theme} .content ul,
   #{$theme} .content ol {
