--- a/style.css
+++ b/style.css
@@ -133,6 +133,7 @@ body#enjoy-mondays {
 
   #enjoy-mondays .content h1,
   #enjoy-mondays .content h2,
+  #enjoy-mondays .content h3,
   #enjoy-mondays .content p,
   #enjoy-mondays .content ul,
   #enjoy-mondays .content ol {
