--- a/style.css
+++ b/style.css
@@ -113,7 +113,11 @@ body#enjoy-mondays {
 /* 3 column background fix */
 @media (min-width: 1180px) {
   #enjoy-mondays .content h1,
-  #enjoy-mondays .content h2 {
+  #enjoy-mondays .content h2,
+  #enjoy-mondays .content h3,
+  #enjoy-mondays .content h4,
+  #enjoy-mondays .content h5,
+  #enjoy-mondays .content h6 {
     max-width: 550px; }
 
   .content ul, .content ol {
@@ -134,6 +138,9 @@ body#enjoy-mondays {
   #enjoy-mondays .content h1,
   #enjoy-mondays .content h2,
   #enjoy-mondays .content h3,
+  #enjoy-mondays .content h4,
+  #enjoy-mondays .content h5,
+  #enjoy-mondays .content h6,
   #enjoy-mondays .content p,
   #enjoy-mondays .content ul,
   #enjoy-mondays .content ol {
