--- a/SASS/sass/style.scss
+++ b/SASS/sass/style.scss
@@ -150,7 +150,12 @@ body#{$theme} {
 
 /* headers */
 
-#{$theme} h1, h2, h3, h4, h5,h6 {
+#{$theme} h1, 
+#{$theme} h2, 
+#{$theme} h3, 
+#{$theme} h4, 
+#{$theme} h5,
+#{$theme} h6 {
   font-family: $font_2 !important;
   font-weight: $bold !important; 
 }
