--- a/SASS/sass/style.scss
+++ b/SASS/sass/style.scss
@@ -257,8 +257,8 @@ body#{$theme} {
 
  /* fill rest of bg above pre tags...chapucilla, just checking if all this works, but at least this should be done with script */
  #{$theme} .content pre + p {
-   margin-top: -130px !important;
-   padding-top: 140px !important;
+ /*  margin-top: -130px !important;
+   padding-top: 140px !important;*/
    z-index: 1;
  }
 }
