--- a/style.css
+++ b/style.css
@@ -160,8 +160,8 @@ body#enjoy-mondays {
 
   /* fill rest of bg above pre tags...chapucilla, just checking if all this works, but at least this should be done with script */
   #enjoy-mondays .content pre + p {
-    margin-top: -130px !important;
-    padding-top: 140px !important;
+    /*  margin-top: -130px !important;
+      padding-top: 140px !important;*/
     z-index: 1; } }
 
 /*# sourceMappingURL=style.css.map */
