--- a/SASS/sass/style.scss
+++ b/SASS/sass/style.scss
@@ -204,7 +204,17 @@ body#{$theme} {
   background-color: #3f3f3f !important;
 }
 
-/* 3 column background fix */
+/* logo footer */
+#{$theme}  #logo-footer {
+  position: absolute;
+  left: 20px;
+  bottom: 20px;
+  width: 25px;
+  height: auto;  
+}
+
+
+/* 3 COLUMN BACKGROUND for big layout */
 @media (min-width: 1180px) {
   
   #{$theme} .content h1,
@@ -253,13 +263,6 @@ body#{$theme} {
 
  #{$theme} .content-root {
    background-color: $ZENBURN_BG !important;
- }
-
- /* fill rest of bg above pre tags...chapucilla, just checking if all this works, but at least this should be done with script */
- #{$theme} .content pre + p {
- /*  margin-top: -130px !important;
-   padding-top: 140px !important;*/
-   z-index: 1;
  }
 }
 
