--- a/style.css
+++ b/style.css
@@ -1,7 +1,42 @@
-/* flatdoc constants */
-/* color constants */
-/* font constants */
-/* classes */
+/*=FLATDOC THEME values------------------------------------------------*/
+/*--------------------------------------------------------------------*/
+/*=ENJOY-MONDAYS CONSTANTS--------------------------------------------*/
+/*--------------------------------------------------------------------*/
+/*=COLORS--------------------------------------------------*/
+/* define any new colors here */
+/*=FONTS---------------------------------------------------*/
+/* define any new fonts here */
+/* fontweights, add/redefine here */
+/*=ENJOY-MONDAYS PATTERN VARIABLES--------------------------*/
+/*=COLOR COMBOS--------------------------*/
+/* change colors here */
+/* BACKGROUNDS */
+/* GENERAL CONTENT BACKGROUND: */
+/* CODE BACKGROUND: */
+/* TEXT */
+/* GENERAL TEXT */
+/* LINKS */
+/* DETAILS (hovers, visited links) */
+/*=FONT FAMILIES-------------------------*/
+/* change font families here */
+/* links and text */
+/* headers */
+/*=FONT SIZES---------------------------*/
+/* change font sizes here */
+/* text, p */
+/* text, pre */
+/* side menu links */
+/* h1 */
+/*=FONT WEIGHTS-------------------------*/
+/* change font weights here */
+/*=VARIABLES and MIXINS------------------------------------*/
+/*=HEADER VARIABLES---------*/
+/* for under 650px */
+/* for under 300px */
+/*=LINKS VARIABLES---------*/
+/* hover effects */
+/*=FOOTER VARIABLES---------*/
+/*=CLASSES-------------------------------------------------*/
 .clearfix {
   clear: both; }
 
@@ -25,25 +60,14 @@
 .top0 {
   top: 0; }
 
-/* */
-/* enjoy-mondays pattern variables */
-/* TODO test template variables */
-/* TODO $theme, $background combos, $a_color, $base_font_color and set into rule / options string */
-/*$theme: enjoy-mondays;*/
-/* colors */
-/* typos */
-/* */
-/* elements */
-/* header */
-/* links */
-/* */
-/* enjoy-mondays css TODO refactor later */
+/*--------------------------------------------------------------------*/
+/*=ENJOY-MONDAYS CSS--------------------------------------------------*/
+/*--------------------------------------------------------------------*/
 /* positioning, box model, typo, visual*/
+/*=DEFAULTS---------------------*/
 body#enjoy-mondays {
   font-family: "Lato", sans-serif;
   font-weight: 100;
-  /*font-size: $base_font_size;*/
-  /* flatdoc theme has body 13px */
   color: #4a4a4a;
   background-color: #e9e8e3; }
 
@@ -53,33 +77,35 @@ body#enjoy-mondays {
 #enjoy-mondays .content {
   background-color: #e9e8e3; }
 
-/* links */
+/*=LINKS-----------------------*/
+/* ALL links */
 #enjoy-mondays a {
   text-decoration: none;
   font-size: 1em;
   color: #3a3a3a;
   font-weight: 900; }
 
-#enjoy-mondays a:active, #enjoy-mondays a:hover, #enjoy-mondays a.active {
-  border-bottom: solid #df3f54 3px; }
+#enjoy-mondays a:hover, #enjoy-mondays a.active {
+  border-bottom: 3px solid #df3f54; }
 
-/* remove dash from links */
+/* remove dash from links FLATDOC OVERRIDE */
 #enjoy-mondays .menu a.active:after {
   background: none; }
 
+/* SIDE MENU links */
 #enjoy-mondays .menu a:visited,
 #enjoy-mondays .menu a:hover,
 #enjoy-mondays .menu a.active {
-  border-left: 3px solid #df3f54;
   margin-left: -3px;
+  border-left: 3px solid #df3f54;
   border-bottom: none;
   color: #df3f54; }
 
 /* make room for border-left as some flatdoc level-x links don't have */
-#enjoy-mondays .menu a {
-  padding-left: 2px; }
+#enjoy-mondays .menu .level-2 > a {
+  padding-left: 3px; }
 
-/* headers */
+/*=HEADERS--------------------*/
 #enjoy-mondays h1,
 #enjoy-mondays h2,
 #enjoy-mondays h3,
@@ -93,7 +119,7 @@ body#enjoy-mondays {
   font-size: 2.5em;
   text-transform: uppercase; }
 
-/* nav header for flatdoc */
+/*=NAV HEADER------------------*/
 #enjoy-mondays .header {
   height: 20px;
   background-color: #e9e8e3; }
@@ -101,14 +127,17 @@ body#enjoy-mondays {
 #enjoy-mondays #fixed-header-aux {
   height: 51px; }
 
-/* TODO if menubar has class fixed, animate header to the left */
+/* TODO if menubar has class fixed, animate header to the left ? */
 #enjoy-mondays .header .left {
   position: relative;
   left: 220px; }
 
-/* elements */
+/*=CONTENT--------------------*/
 #enjoy-mondays p {
   font-size: 1.25em; }
+
+#enjoy-mondays pre {
+  font-size: 1.15em; }
 
 #enjoy-mondays hr {
   border: 0;
@@ -117,11 +146,11 @@ body#enjoy-mondays {
   margin: 0 auto 3%;
   clear: both; }
 
-/* hightlight js fix */
+/*=HIGHLIGHT JS OVERRIDE-----*/
 #enjoy-mondays .hljs {
   background-color: #3f3f3f !important; }
 
-/* logo footer */
+/*=LOGO FOOTER---------------*/
 #enjoy-mondays #logo-footer {
   position: absolute;
   left: 20px;
@@ -132,7 +161,7 @@ body#enjoy-mondays {
 #enjoy-mondays #logo-footer img {
   width: 100%; }
 
-/* 3 COLUMN BACKGROUND for big layout */
+/*=3 COLUMN BACKGROUND for big layout--------------------*/
 @media (min-width: 1180px) {
   #enjoy-mondays .content h1,
   #enjoy-mondays .content h2,
@@ -174,10 +203,10 @@ body#enjoy-mondays {
 
   #enjoy-mondays .content-root {
     background-color: #3f3f3f !important; } }
-/* format HEADER iframes WHEN UNDER 767px */
-/* check width when side menu drops out */
+/*=format HEADER iframes WHEN UNDER 767px--------------------*/
+/* (when side menu drops out) */
 @media (max-width: 767px) {
-  /* header title and menu */
+  /*=header title and menu-----------*/
   #enjoy-mondays .header .left {
     left: 0; }
 
@@ -190,25 +219,26 @@ body#enjoy-mondays {
     width: 145px;
     float: left; }
 
+  /* github star button */
   #enjoy-mondays .header .right iframe:nth-child(2) {
     width: 75px;
     float: left; }
 
-  /* format CONTENT when under 860 px --> centered content */
+  /*=format CONTENT when under 767px = centered content--------*/
   .content {
     padding-left: 0;
     padding-right: 0;
     margin-left: auto;
     margin-right: auto;
     width: 80%; } }
-/* STACK HEADER iframes WHEN UNDER 650px */
+/*=STACK HEADER iframes WHEN UNDER 650px-----------------------*/
 @media (max-width: 650px) {
-  /* adapt header height to stack in two rows*/
+  /* adapt header height to stack in two rows */
   #enjoy-mondays .header {
-    height: 45px; }
+    height: 47px; }
 
   #enjoy-mondays #fixed-header-aux {
-    height: 76px; }
+    height: 78px; }
 
   /* header title and menu */
   #enjoy-mondays .header .left h1 {
@@ -227,7 +257,7 @@ body#enjoy-mondays {
     left: 30px;
     top: 47px;
     display: block; } }
-/* STACK HEADER iframes WHEN UNDER 300px */
+/*=STACK HEADER iframes WHEN UNDER 300px-----------------------*/
 @media (max-width: 300px) {
   #enjoy-mondays .header {
     height: 47px; }
