add background_1.css for color swap test

--- a/SASS/sass/style.scss
+++ b/SASS/sass/style.scss
@@ -25,6 +25,7 @@ $DARK_BLUE:	#363b48;
 $FUXSIA: #df3f54;
 $LIGHT_FUXSIA: #f17c71;
 $ZENBURN_BG: #3f3f3f; 
+$LIGHT_WHITE: #F8F8F4;
 
 
 /*=FONTS---------------------------------------------------*/ 
