--- a/SASS/sass/background_1.scss
+++ b/SASS/sass/background_1.scss
@@ -18,15 +18,14 @@ body#{$theme} {
 	background-color: $background_1;
 }
 
-@media (min-width: 1180px) {
-  #{$theme} .content h2,
-  #{$theme} .content h3,
-  #{$theme} .content h4,
-  #{$theme} .content h5,
-  #{$theme} .content h6,
-  #{$theme} .content p,
-  #{$theme} .content ul,
-  #{$theme} .content ol {
-    background-color: $background_1;
- }
+#{$theme} h1,
+#{$theme} h2,
+#{$theme} h3,
+#{$theme} h4,
+#{$theme} h5,
+#{$theme} h6,
+#{$theme} p,
+#{$theme} ul,
+#{$theme} ol {
+  background-color: $background_1;
 }
