--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 /* define any new fonts here */
 /* fontweights, add/redefine here */
 /*=ENJOY-MONDAYS PATTERN VARIABLES--------------------------*/
+/* assigned (manually) to body as id, used to make sure these css rules override flatdoc style.css rules */
 /*=COLOR COMBOS--------------------------*/
 /* change colors here */
 /* BACKGROUNDS */
@@ -113,7 +114,8 @@ body#enjoy-mondays {
 #enjoy-mondays h5,
 #enjoy-mondays h6 {
   font-family: "Dosis", sans-serif !important;
-  font-weight: 600 !important; }
+  font-weight: 600 !important;
+  background-color: #e9e8e3; }
 
 #enjoy-mondays h1 {
   font-size: 2.5em;
@@ -134,17 +136,22 @@ body#enjoy-mondays {
 
 /*=CONTENT--------------------*/
 #enjoy-mondays p {
-  font-size: 1.25em; }
+  font-size: 1.25em;
+  background-color: #e9e8e3; }
 
 #enjoy-mondays pre {
   font-size: 1.15em; }
 
-#enjoy-mondays hr {
+#enjoy-mondays .content hr {
   border: 0;
   height: 3px;
   width: 18%;
   margin: 0 auto 3%;
   clear: both; }
+
+#enjoy-mondays ul,
+#enjoy-mondays ol {
+  background-color: #e9e8e3; }
 
 /*=HIGHLIGHT JS OVERRIDE-----*/
 #enjoy-mondays .hljs {
@@ -197,7 +204,6 @@ body#enjoy-mondays {
   #enjoy-mondays .content p,
   #enjoy-mondays .content ul,
   #enjoy-mondays .content ol {
-    background-color: #e9e8e3;
     position: relative;
     z-index: 2; }
 
